SONARPY-1147 Refactoring before release of SonarPython 3.18