@@ -19,9 +19,9 @@
  */
 package org.sonar.python.checks.cdk;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.BiConsumer;
 import org.sonar.check.Rule;
 import org.sonar.plugins.python.api.SubscriptionContext;
 import org.sonar.plugins.python.api.symbols.Symbol;
@@ -32,6 +32,8 @@ import org.sonar.plugins.python.api.tree.Name;
 import org.sonar.plugins.python.api.tree.QualifiedExpression;
 import org.sonar.plugins.python.api.tree.Tree;
 
+import static org.sonar.python.checks.cdk.CdkUtils.getArgument;
+
 @Rule(key = "S6265")
 public class S3BucketGrantedAccessCheck extends AbstractS3BucketCheck {
 
@@ -41,16 +43,16 @@ public class S3BucketGrantedAccessCheck extends AbstractS3BucketCheck {
   private static final String S3_BUCKET_AUTHENTICATED_READ = "aws_cdk.aws_s3.BucketAccessControl.AUTHENTICATED_READ";
   private static final String S3_BUCKET_PUBLIC_READ = "aws_cdk.aws_s3.BucketAccessControl.PUBLIC_READ";
   private static final String S3_BUCKET_PUBLIC_READ_WRITE = "aws_cdk.aws_s3.BucketAccessControl.PUBLIC_READ_WRITE";
-  private static final List<String> S3_BUCKET_FQNS = Arrays.asList(S3_BUCKET_FQN, S3_BUCKET_DEPLOYMENT_FQN);
-  private static final List<String> S3_BUCKET_SENSITIVE_POLICIES = Arrays.asList(S3_BUCKET_AUTHENTICATED_READ, S3_BUCKET_PUBLIC_READ, S3_BUCKET_PUBLIC_READ_WRITE);
+  private static final List<String> S3_BUCKET_FQNS = List.of(S3_BUCKET_FQN, S3_BUCKET_DEPLOYMENT_FQN);
+  private static final List<String> S3_BUCKET_SENSITIVE_POLICIES = List.of(S3_BUCKET_AUTHENTICATED_READ, S3_BUCKET_PUBLIC_READ, S3_BUCKET_PUBLIC_READ_WRITE);
 
   private boolean isAwsCdkImported = false;
 
   @Override
   public void initialize(Context context) {
+    super.initialize(context);
     context.registerSyntaxNodeConsumer(Tree.Kind.FILE_INPUT, ctx -> isAwsCdkImported = false);
     context.registerSyntaxNodeConsumer(Tree.Kind.IMPORT_FROM, this::checkAWSImport);
-    context.registerSyntaxNodeConsumer(Tree.Kind.CALL_EXPR, this::visitNode);
   }
 
   private void checkAWSImport(SubscriptionContext ctx) {
@@ -71,7 +73,7 @@ public class S3BucketGrantedAccessCheck extends AbstractS3BucketCheck {
     symbol
       .map(Symbol::fullyQualifiedName)
       .filter(S3_BUCKET_FQNS::contains)
-      .ifPresent(s -> visitBucketConstructor(ctx, node));
+      .ifPresent(s -> visitBucketConstructor().accept(ctx, node));
 
     if (isAwsCdkImported) {
       symbol
@@ -82,22 +84,12 @@ public class S3BucketGrantedAccessCheck extends AbstractS3BucketCheck {
   }
 
   @Override
-  void visitBucketConstructor(SubscriptionContext ctx, CallExpression bucket) {
-    getArgument(ctx, bucket, "access_control")
-      .ifPresent(argument -> argument.addIssueIf(this::isSensitivePolicy, getSensitivePolicyMessage(argument)));
+  BiConsumer<SubscriptionContext, CallExpression> visitBucketConstructor() {
+    return (ctx, bucket) -> getArgument(ctx, bucket, "access_control")
+      .ifPresent(argument -> argument.addIssueIf(CdkPredicate.isFqnOf(S3_BUCKET_SENSITIVE_POLICIES), getSensitivePolicyMessage(argument)));
   }
 
-  protected boolean isSensitivePolicy(Expression expression) {
-    return Optional.ofNullable(expression)
-      .filter(QualifiedExpression.class::isInstance)
-      .map(QualifiedExpression.class::cast)
-      .map(QualifiedExpression::symbol)
-      .map(Symbol::fullyQualifiedName)
-      .filter(S3_BUCKET_SENSITIVE_POLICIES::contains)
-      .isPresent();
-  }
-
-  private static String getSensitivePolicyMessage(ArgumentTrace argumentTrace){
+  private static String getSensitivePolicyMessage(CdkUtils.ExpressionTrace argumentTrace){
     Expression lastExpression = argumentTrace.trace()
       .get(argumentTrace.trace().size()-1);
     String attribute = ((QualifiedExpression) lastExpression).name().name();
